[package]
name        = "enprot"
version     = "0.1.0"
authors     = ["Ribose Inc. <open.source@ribose.com>"]
autotests   = false

[[bin]]
name = "enprot"
path = "src/main.rs"

[[test]]
name = "integration"
path = "tests/tests.rs"

[dependencies]
hex         = "0.3"
base64      = "0.9"
rpassword   = "2"
clap        = "2.33.0"
phc         = { git = "https://github.com/kstrohbeck/phc", branch = "develop" }
botan       = "0.6.0"
num         = "0.2.0"
phf         = { git = "https://github.com/sfackler/rust-phf", branch = "master", features = ["macros"] }

[dev-dependencies]
tempfile    = "3.1.0"
assert_cmd  = "0.11"
predicates  = "1.0"
