[package]
name        = "enprot"
version     = "0.2.0"
authors     = ["Ribose Inc. <open.source@ribose.com>"]
license     = "BSD-2-Clause"
description = "enprot command line tool for Engyon"
repository  = "https://github.com/riboseinc/enprot"
categories  = ["command-line-utilities", "cryptography"]
keywords    = ["encryption", "engyon"]
autotests   = false

[[bin]]
name = "enprot"
path = "src/main.rs"

[[test]]
name = "integration"
path = "tests/tests.rs"

[dependencies]
hex         = "0.3"
rpassword   = "2"
clap        = "2.33.0"
phc         = "0.2.0"
botan       = "0.6.0"
num         = "0.2.0"
phf         = { version = "0.8.0", features = ["macros"] }

[dev-dependencies]
tempfile    = "3.1.0"
assert_cmd  = "0.11"
predicates  = "1.0"
cpu-time    = "1.0.0"

